ajustas nas Avarias  para melhor funcionamento phhborba-OS-19